Updated word wrapping of long error messages to show entire message. Fixed #133

--- a/app/css/components/_alerts.scss
+++ b/app/css/components/_alerts.scss
@@ -1,5 +1,6 @@
 .alert {
   border-radius: 0;
+  margin-bottom: 40px;
 
   &>ul {
     padding-left: 20px;
@@ -10,8 +11,12 @@
   }
 
   &.error p {
-    text-overflow: ellipsis;
     overflow: hidden;
     white-space: normal;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    -ms-word-break: break-all;
+    word-break: break-word;
   }
 }
